crates/solidity/testing/snapshots/bindings_output/contracts/constructor_invocation/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or InternalKeyword or PrivateKeyword or PublicKeyword.
   ╭─[input.sol:4:16]
   │
 4 │     constructor(int _x) {}
   │                ──────┬─────  
   │                      ╰─────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract A {
   │          ┬  
   │          ╰── def: 1
 2 │     function A(int _x) {}
   │              ┬     ─┬  
   │              ╰───────── def: 2
   │                     │  
   │                     ╰── def: 3
   │ 
 4 │     constructor(int _x) {}
   │     ─────┬─────  
   │          ╰─────── unresolved
   │ 
 7 │ contract Test {
   │          ──┬─  
   │            ╰─── def: 4
 8 │     function foo() public {
   │              ─┬─  
   │               ╰─── def: 5
 9 │         new A({_x: 2});
   │             ┬  ─┬  
   │             ╰────── ref: 1
   │                 │  
   │                 ╰── ref: 3
───╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │   ╭───▶ contract A {
  2 │   │         function A(int _x) {}
    │   │     ─────────────┬────┬───────  
    │   │                  ╰────────────── definiens: 2
    │   │                       │         
    │   │                       ╰───────── definiens: 3
    ┆   ┆     
  5 │ │ ├───▶ }
    │ │ │         
    │ │ ╰───────── definiens: 1
  6 │ ╭─────▶ 
    ┆ ┆   ┆   
  8 │ │   ╭─▶     function foo() public {
    ┆ ┆   ┆   
 10 │ │   ├─▶     }
    │ │   │           
    │ │   ╰─────────── definiens: 5
 11 │ ├─────▶ }
    │ │           
    │ ╰─────────── definiens: 4
────╯
